--- a/MvvmTestDemo/DemoViews/ButtonDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ButtonDemo.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:toolkit="https://Chance.CookPopularCSharpToolkit/2021/xaml"
@@ -105,34 +104,40 @@
             </WrapPanel>
 
             <WrapPanel HorizontalAlignment="Center">
-                <Button Width="300" Height="100"
+                <Button Width="300" Height="100" FontSize="16"
                         Content="ContentWithGifButton"
-                        FontSize="20"
                         ToolTip="ContentWithGifButton"
-                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" pc:ButtonAssist.ImageHeight="50"
+                        pc:ButtonAssist.IsAutoStart="True"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
+                        pc:ButtonAssist.ImageHeight="50"
                         pc:ButtonAssist.ImageWidth="50"
                         Style="{StaticResource ButtonContentWithGifStyle}" />
                 <Button Width="300" Height="100"
                         Margin="20,0" ToolTip="GifButton"
-                        gif:AnimationBehavior.AutoStart="True" gif:AnimationBehavior.RepeatBehavior="0x"
-                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" pc:ButtonAssist.ImageHeight="100"
-                        pc:ButtonAssist.ImageWidth="100"
-                        Style="{StaticResource ButtonGifStyle}" />
-                <Button Width="300" Height="100"
-                        Background="White"
-                        Margin="0,10,0,0" ToolTip="GifTransparentButton"
-                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" pc:ButtonAssist.ImageHeight="200"
-                        pc:ButtonAssist.ImageWidth="200" pc:FrameworkElementBaseAttached.CornerRadius="20"
-                        Style="{StaticResource ButtonTransparentGifStyle}">
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
+                        pc:ButtonAssist.ImageHeight="100"
+                        pc:ButtonAssist.ImageWidth="100" 
+                        pc:ButtonAssist.IsAutoStart="True"
+                        Style="{StaticResource ButtonGifStyle}">
                     <behavior:Interaction.Behaviors>
                         <pc:ControlBorderBehavior AnimationType="Path" />
                     </behavior:Interaction.Behaviors>
                 </Button>
+                <Button Width="300" Height="100" Background="DodgerBlue"
+                        Margin="0,10,0,0" ToolTip="GifTransparentButton"
+                        pc:ButtonAssist.IsAutoStart="True"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" 
+                        pc:ButtonAssist.ImageHeight="100"
+                        pc:ButtonAssist.ImageWidth="100" 
+                        pc:FrameworkElementBaseAttached.CornerRadius="20"
+                        Style="{StaticResource ButtonTransparentGifStyle}"/>
                 <Button Width="300" Height="100"
                         Margin="20,10,0,0"
                         HorizontalContentAlignment="Center"
-                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" pc:ButtonAssist.ImageHeight="100"
-                        pc:ButtonAssist.ImageWidth="200" pc:FrameworkElementBaseAttached.CornerRadius="20"
+                        pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif" 
+                        pc:ButtonAssist.ImageWidth="300" 
+                        pc:ButtonAssist.ImageHeight="100"
+                        pc:FrameworkElementBaseAttached.CornerRadius="20"
                         pc:RippleAssist.Feedback="White">
                     <Button.Style>
                         <Style TargetType="Button">
@@ -144,7 +149,7 @@
                                                 <Border.Background>
                                                     <VisualBrush>
                                                         <VisualBrush.Visual>
-                                                            <Image gif:AnimationBehavior.SourceUri="{TemplateBinding pc:ButtonAssist.GifSource}" />
+                                                            <pc:Gif IsAutoStart="True" GifSource="{TemplateBinding pc:ButtonAssist.GifSource}" />
                                                         </VisualBrush.Visual>
                                                     </VisualBrush>
                                                 </Border.Background>
