--- a/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
@@ -2,7 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:gif="https://github.com/XamlAnimatedGif/XamlAnimatedGif"
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
@@ -136,7 +135,7 @@
                       IsEditable="True"
                       ItemsSource="{Binding ImageLists}"
                       Style="{StaticResource AddClearButtonMultiComboBoxImageItemsStyle}" />
-            <Image Width="34" Height="34" gif:AnimationBehavior.SourceUri="../Resources/Gif/programmer.gif" />
+            <pc:Gif Width="34" Height="34" GifSource="../Resources/Gif/programmer.gif" />
             <TextBlock Text="ItemsImageGif" FontSize="20" Margin="10,0" />
         </WrapPanel>
     </StackPanel>
