add trayicon baseon notifyicon

--- a/CookPopularControl/Themes/BaseStyle/OtherControlTemplate.xaml
+++ b/CookPopularControl/Themes/BaseStyle/OtherControlTemplate.xaml
@@ -1,31 +1,31 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:ex="clr-namespace:CookPopularControl.Expression">
+                    xmlns:ex="clr-namespace:CookPopularControl.Expression"
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
 
     <ControlTemplate x:Key="ColorPickerCircularRing">
         <pc:SimpleGrid x:Name="CustomColorGrid" Background="Transparent">
             <ex:Arc Fill="{DynamicResource RedLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="51.5" StartAngle="0" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="51.5" StartAngle="0" />
             <ex:Arc Fill="{DynamicResource OrangeLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="103" StartAngle="51.5" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="103" StartAngle="51.5" />
             <ex:Arc Fill="{DynamicResource YellowLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="154.5" StartAngle="103" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="154.5" StartAngle="103" />
             <ex:Arc Fill="{DynamicResource GreenLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="206" StartAngle="154.5" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="206" StartAngle="154.5" />
             <ex:Arc Fill="{DynamicResource CyanLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="257.5" StartAngle="206" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="257.5" StartAngle="206" />
             <ex:Arc Fill="{DynamicResource BlueLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="309" StartAngle="257.5" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="309" StartAngle="257.5" />
             <ex:Arc Fill="{DynamicResource PurpleLinearGradientBrush}"
-                         Stretch="None"
-                         ArcThickness="40" EndAngle="360" StartAngle="309" />
+                    Stretch="None"
+                    ArcThickness="40" EndAngle="360" StartAngle="309" />
         </pc:SimpleGrid>
     </ControlTemplate>
 
