--- a/MvvmTestDemo/App.xaml
+++ b/MvvmTestDemo/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="MvvmTestDemo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MvvmTestDemo"
+             xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              ShutdownMode="OnExplicitShutdown">
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -26,4 +27,5 @@
             <sys:Double x:Key="DemoViewsDefaultWidth">800</sys:Double>
         </ResourceDictionary>
     </Application.Resources>
+
 </Application>
